# camera-tracker

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CameraTracker/: BaslerGigECamera.i  Calibration.cpp  Calibration.h  CameraTracker.cpp  CameraTracker.vcxproj  CameraTracker.vcxproj.filters  Chessboard.h  GUI.cpp  MoveComputer.cpp  RotationStage.cpp  Scanner.h  camera_parameters.json  pylon5.props  qt.props  zbar_properties.props
CameraTracker-Original/: CameraTracker.cpp  CameraTracker.vcxproj.filters  Chessboard.cpp  Chessboard.h  ChessboardDetector.cpp  ChessboardDetector.h  ChessboardDetectorParameters.cpp  ChessboardDetectorParameters.h  RotationStage.h
CameraTrackerLinux/: CMakeLists.txt  main.cpp
CameraTrackerLinux/doc/html/: BaslerGigECamera_8cpp.html  BaslerGigECamera_8cpp__incl.map  BaslerGigECamera_8cpp__incl.md5  BaslerGigECamera_8h.html  BaslerGigECamera_8h__dep__incl.map  BaslerGigECamera_8h__dep__incl.md5  BaslerGigECamera_8h__incl.map  BaslerGigECamera_8h__incl.md5  BaslerGigECamera_8h_source.html  ChessboardDetector_8h.html  ChessboardDetector_8h__dep__incl.map  ChessboardDetector_8h__dep__incl.md5  ChessboardDetector_8h__incl.map  ChessboardDetector_8h__incl.md5  ChessboardDetector_8h_source.html  Chessboard_8h.html  Chessboard_8h__dep__incl.map  Chessboard_8h__dep__incl.md5  Chessboard_8h__incl.map  Chessboard_8h__incl.md5  Chessboard_8h_source.html  Conex_8h_source.html  GenericCamera_8cpp.html  GenericCamera_8cpp__incl.map  GenericCamera_8cpp__incl.md5  GenericCamera_8h.html  GenericCamera_8h__dep__incl.map  GenericCamera_8h__dep__incl.md5  GenericCamera_8h__incl.md5  GenericCamera_8h_source.html  RotationStage_8h.html  RotationStage_8h__incl.map  RotationStage_8h__incl.md5  RotationStage_8h_source.html  Scanner_8h.html  Scanner_8h__incl.map  Scanner_8h__incl.md5  Scanner_8h_source.html  TimedFrame_8h_source.html  _basler_gig_e_camera_8cpp.html  (+1254 more)
CameraTrackerLinux/doc/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_b.js  classes_e.js  defines_1.js  defines_2.js  defines_3.js  (+95 more)
CameraTrackerLinux/doc/latex/: BaslerGigECamera_8cpp.tex  BaslerGigECamera_8cpp__incl.md5  BaslerGigECamera_8h.tex  BaslerGigECamera_8h__dep__incl.md5  BaslerGigECamera_8h__incl.md5  ChessboardDetector_8h.tex  ChessboardDetector_8h__dep__incl.md5  ChessboardDetector_8h__incl.md5  Chessboard_8h.tex  Chessboard_8h__dep__incl.md5  Chessboard_8h__incl.md5  GenericCamera_8cpp.tex  GenericCamera_8cpp__incl.md5  GenericCamera_8h.tex  GenericCamera_8h__dep__incl.md5  GenericCamera_8h__incl.md5  RotationStage_8h.tex  RotationStage_8h__incl.md5  Scanner_8h.tex  Scanner_8h__incl.md5  _basler_gig_e_camera_8cpp.tex  _basler_gig_e_camera_8cpp__incl.dot  _basler_gig_e_camera_8cpp__incl.md5  _basler_gig_e_camera_8h.tex  _basler_gig_e_camera_8h__dep__incl.dot  _basler_gig_e_camera_8h__dep__incl.md5  _basler_gig_e_camera_8h__incl.dot  _basler_gig_e_camera_8h__incl.md5  _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _chessboard_8cpp.tex  _chessboard_8cpp__incl.dot  _chessboard_8cpp__incl.md5  _chessboard_8h.tex  _chessboard_8h__dep__incl.dot  _chessboard_8h__dep__incl.md5  _chessboard_8h__incl.dot  _chessboard_8h__incl.md5  _chessboard_detector_8cpp.tex  _chessboard_detector_8cpp__incl.dot  (+651 more)
CameraTrackerLinux/include/: Chessboard.h  ChessboardDetector.h  Conex.h  GUI.h  JsonUtilization.h  PoseEstimation.h  RotationStage.h  TimedFrame.h  Tracker.h  TrackerGUI.h
CameraTrackerLinux/include/nlohmann/: json.hpp
CameraTrackerLinux/include/nlohmann/detail/meta/: type_traits.hpp
CameraTrackerLinux/include/nlohmann/detail/output/: binary_writer.hpp
CameraTrackerLinux/src/: ChessboardDetector.cpp  Conex.cpp  GUI.cpp  GenericCamera.cpp  JsonUtilization.cpp  PoseEstimation.cpp  RotationStage.cpp  TimedFrame.cpp  Tracker.cpp  TrackerGUI.cpp  TrackerGUI.ui
ChessboardDetector/: BaslerGigECamera.cpp  Calibration.cpp  Calibration.h  CameraParams.cpp  CameraParams.h  CameraTracker.cpp  CameraTracker.sln  CameraTracker.vcxproj  CameraTracker.vcxproj.filters  Chessboard.cpp  Chessboard.h  ChessboardDetector.cpp  ChessboardDetector.h  ChessboardDetector.sln  Conex.cpp  Conex.h  GUI.ui  Grid.cpp  Grid.h  JsonFile.cpp  JsonFile.h  MoveComputer.cpp  MoveComputer.h  Scanner.cpp  Scanner.h  opencv_properties.props
doc/: Doxyfile
docs/: Doxyfile  _basler_gig_e_camera_8cpp.html  _basler_gig_e_camera_8cpp__incl.dot  _basler_gig_e_camera_8h.html  _basler_gig_e_camera_8h__dep__incl.dot  _basler_gig_e_camera_8h__incl.dot  _basler_gig_e_camera_8h_source.html  _chessboard_8cpp.html  _chessboard_8cpp__incl.dot  _chessboard_8h.html  _chessboard_8h__dep__incl.dot  _chessboard_8h__incl.dot  _chessboard_8h_source.html  _chessboard_detector_8cpp.html  _chessboard_detector_8cpp__incl.dot  _chessboard_detector_8h.html  _chessboard_detector_8h__dep__incl.dot  _chessboard_detector_8h__incl.dot  _chessboard_detector_8h_source.html  _conex_8cpp.html  _conex_8cpp__incl.dot  _conex_8h.html  _conex_8h__dep__incl.dot  _conex_8h__incl.dot  _conex_8h_source.html  (+760 more)
(+279 files in other folders)
